--- a/css/stules.css
+++ b/css/stules.css
@@ -656,14 +656,14 @@ button {
     background-color: var(--advice);
   }
 
-   .modal-btn:active{
-    background-color: var(--link);
-    width: 24px;
-    height: 24px;
-  } 
 
   .modal-icon {
     fill: var(--blackk);
+  }
+
+  .modal-icon:active {
+    fill: var(--button);
+    background-color: var(--link);
   }
 
   .backdrop {
