--- a/css/stules.css
+++ b/css/stules.css
@@ -746,11 +746,10 @@ button {
     padding-left: 45px;
     padding-right: 45px;
     border-radius: 4px;
-    border: 1px solid var(--svg);
   }
   .modal-form-field:focus,
   .modal-form-field:focus-visible {
-    outline-color: var(--web);
+    border: solid 1px var(--link);
   }
   .modal-form-icon {
     position: absolute;
