--- a/css/stules.css
+++ b/css/stules.css
@@ -618,21 +618,6 @@ button {
     transition-delay: 250ms;
   }
 
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  
-    width: 450px;
-    min-height: 550px;
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  
-    transition: transform 150ms ease, opacity 150ms ease;
-    transition-delay: 400ms;
-  }
 
   .backdrop.is-hidden .modal {
     transform: translate(-50%, -70%);
@@ -823,8 +808,8 @@ button {
     transform-origin: center;
   }
   .modal-form-checkbox:checked + .custom-checkbox > .custom-checkbox-check {
-    opacity: 1;
-    transform: rotate(360deg) scale(0.7);
+    /* opacity: 1;
+    transform: rotate(360deg) scale(0.7); */
   }
   .modal-form-desc {
     font-size: 14px;
