--- a/css/stules.css
+++ b/css/stules.css
@@ -677,7 +677,7 @@ button {
     transition-delay: 400ms;
   }
   .backdrop.is-hidden .modal {
-    transform: translate(-50%, -70%);
+    
     opacity: 0;
     transition-delay: 0s;
   }
@@ -692,6 +692,8 @@ button {
     width: 24px;
     height: 24px;
     padding: 0;
+    border: none;
+    border-radius: 50%;
   }
   .modal-icon {
     fill: var(--advice);
