--- a/css/stules.css
+++ b/css/stules.css
@@ -732,7 +732,7 @@ button {
     position: absolute;
     top: 50%;
     left: 10px;
-    
+    transform: translateY(-50%);
     pointer-events: none;
   
     transition: fill var(--link);
