--- a/css/stules.css
+++ b/css/stules.css
@@ -830,3 +830,19 @@ button {
     transition-timing-function: cubic-bezier(0, 0, 1, 0);
   }
 
+  .modal-checkbox-hid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border: 1.25px solid var(--primary-text-color);
+    border-radius: 2px;
+    margin-right: 8px;
+    cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox-icon {
+    opacity: 0;
+}
