--- a/css/stules.css
+++ b/css/stules.css
@@ -728,7 +728,7 @@ button {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-checkbox-hid {
+/* .modal-checkbox-hid {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -739,22 +739,22 @@ button {
   margin-right: 8px;
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .modal-checkbox-icon {
   opacity: 0;
 }
 
-.modal-form-checkbox:checked+.modal-checkbox-hid>.modal-checkbox-icon {
+/* .modal-form-checkbox:checked+.modal-checkbox-hid>.modal-checkbox-icon {
   opacity: 1;
-}
+} */
 
-.modal-form-checkbox:checked+.modal-checkbox-hid {
+/* .modal-form-checkbox:checked+.modal-checkbox-hid {
   border-color: var(--link);
   background-color: var(--link);
   fill: var(--button);
   transition: background-color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .modal-check {
   display: flex;
