--- a/css/stules.css
+++ b/css/stules.css
@@ -832,8 +832,8 @@ button {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  color: var(--white-color);
-  background-color: var(--primary-text-color);
+  color: var(--button);
+  background-color: var(--black);
   width: 100%;
   padding: 7px 16px;
   line-height: 1.5;
@@ -841,8 +841,8 @@ button {
 }
 
 .subscribe-btn {
-  background-color: var(--logo-btn-color);
-  color: var(--white-color);
+  background-color: var(--web);
+  color: var(--button);
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -863,12 +863,12 @@ button {
 
 .subscribe-btn:hover,
 .subscribe-btn:focus {
-  background: var(--hover-focus-color);
+  background: var(--link);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   border-radius: 4px;
   letter-spacing: 0.04em;
 }
 
 .svg-tg {
-  fill: var(--white-color)
+  fill: var(--button)
 }
